2009-02-05 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix two indentation errors.

2009-02-04 Francesco Fumanti <francesco.fumanti@gmx.net>

    Remove unnecessary check.

2009-02-04 Francesco Fumanti <francesco.fumanti@gmx.net>

    Store position and size to gconf only if different from stored values.

2009-02-04 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix regression braking the moving of the floating palette.

2009-02-03 Francesco Fumanti <francesco.fumanti@gmx.net>

    Syncronize with revision 136 of lp:onboard.

2009-01-21 Francesco Fumanti <francesco.fumanti@gmx.net>

    Forgot Changelog entry in previous commit (rev. 139).

2009-01-21 Francesco Fumanti <francesco.fumanti@gmx.net>

    Syncronize with revision 133 of lp:onboard.

2009-01-14 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix regression about remembering position of onscreen keyboard.

2009-01-13 Francesco Fumanti <francesco.fumanti@gmx.net>

    Add a floating palette that is shown when onscreen keyboard is hidden.

2008-12-11 Francesco Fumanti <francesco.fumanti@gmx.net>

    Change several line breaks in utils.py.

2008-12-09 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix accelerator for the 'start minimized' check box.

2008-12-09 Francesco Fumanti <francesco.fumanti@gmx.net>

    Change tab order in settings dialog.

2008-12-09 Francesco Fumanti <francesco.fumanti@gmx.net>

    Add option to start minimized. LP: #124625

2008-12-07 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix inconsistancy in trayicon gconf keyname.

2008-12-07 Francesco Fumanti <francesco.fumanti@gmx.net>

    Syncronize with revision 124 of lp:onboard.

2008-12-01 Francesco Fumanti <francesco.fumanti@gmx.net>

    Fix: a gconf key name for the trayicon.

2008-12-01 Francesco Fumanti <francesco.fumanti@gmx.net>

    Syncronize branch with revision 121 of lp:onboard.

2008-11-30 Francesco Fumanti <francesco.fumanti@gmx.net>

    Use correct gconf key name for the trayicon.
